--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,56 @@
+aws-requests-auth==0.4.0
 beautifulsoup4==4.6.0
+boto3==1.9.189
+botocore==1.12.33
+cachetools==3.1.1
 certifi==2019.11.28
 chardet==3.0.4
+defusedxml==0.6.0
+dj-database-url==0.4.1
 Django==2.2.8
+django-allauth==0.40.0
+django-cache-url==2.0.0
 django-dotenv==1.4.1
 django-modelcluster==5.0
+django-redis==4.8.0
+django-storages==1.7.2
 django-taggit==1.2.0
 django-treebeard==4.3
 djangorestframework==3.10.3
+docutils==0.15.2
 draftjs-exporter==2.1.7
+elasticsearch==2.4.1
+google-api-core==1.14.3
+google-auth==1.8.1
+google-cloud-core==1.1.0
+google-cloud-storage==1.20.0
+google-resumable-media==0.4.1
+googleapis-common-protos==1.6.0
 html5lib==1.0.1
 idna==2.8
+jmespath==0.9.4
+oauthlib==3.1.0
 Pillow==6.2.1
+pkg-resources==0.0.0
+protobuf==3.11.1
+psycopg2==2.8.4
+pyasn1==0.4.8
+pyasn1-modules==0.2.7
+python-dateutil==2.8.1
+python3-openid==3.1.0
 pytz==2019.3
+redis==3.3.11
 requests==2.22.0
+requests-oauthlib==1.3.0
+rsa==4.0
+s3transfer==0.2.1
 six==1.13.0
 sqlparse==0.3.0
 Unidecode==1.1.1
 urllib3==1.25.7
+uWSGI==2.0.18
 wagtail==2.7
 wagtailfontawesome==1.1.4
 webencodings==0.5.1
+whitenoise==3.2.2
 Willow==1.3
