--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aws-requests-auth==0.4.0
 beautifulsoup4==4.6.0
+boto==2.49.0
 boto3==1.9.189
 botocore==1.12.33
 cachetools==3.1.1
@@ -31,6 +32,7 @@ idna==2.8
 jmespath==0.9.4
 oauthlib==3.1.0
 Pillow==6.2.1
+pkg-resources==0.0.0
 protobuf==3.11.1
 psycopg2==2.8.4
 pyasn1==0.4.8
