--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ dj-database-url==0.4.1
 Django==2.2.8
 django-allauth==0.40.0
 django-cache-url==2.0.0
+django-cors-headers==3.2.0
 django-dotenv==1.4.1
 django-modelcluster==5.0
 django-redis==4.8.0
