--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-cache-url==2.0.0
 django-cors-headers==3.2.0
 django-dotenv==1.4.1
 django-modelcluster==5.0
+django-recaptcha==2.0.5
 django-redis==4.8.0
 django-storages==1.7.2
 django-taggit==1.2.0
@@ -51,6 +52,7 @@ Unidecode==1.1.1
 urllib3==1.25.7
 uWSGI==2.0.18
 wagtail==2.7
+wagtail-django-recaptcha==1.0
 wagtailfontawesome==1.1.4
 webencodings==0.5.1
 whitenoise==3.2.2
