--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,11 @@ dj-database-url==0.4.1
 Django==2.2.8
 django-allauth==0.40.0
 django-cache-url==2.0.0
+django-captcha-admin==0.2
 django-cors-headers==3.2.0
 django-dotenv==1.4.1
 django-modelcluster==5.0
-django-recaptcha==2.0.5
+django-recaptcha==1.3.0
 django-redis==4.8.0
 django-storages==1.7.2
 django-taggit==1.2.0
